--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -5,8 +5,8 @@
   --active-bg: var(--primary-color);
   --content-bg: #fff;
   --bg-color: #f0f0f0;
-  --primary-color: #10b981;
-  --primary-color-rgb: 16, 185, 129;
+  --primary-color: #2563eb;
+  --primary-color-rgb: 37, 99, 235;
   --secondary-color: #333;
 }
 
@@ -35,15 +35,15 @@
 }
 
 .dark-mode {
-  --background-color: #121212;
-  --text-color: #e5e7eb;
-  --sidebar-bg: #1a1a1a;
-  --active-bg: var(--primary-color);
-  --content-bg: #1a1a1a;
-  --bg-color: #121212;
-  --primary-color: #10b981;
-  --primary-color-rgb: 16, 185, 129;
-  --secondary-color: #e5e7eb;
+  --background-color: #000000;
+  --text-color: #ffffff;
+  --sidebar-bg: #000000;
+  --active-bg: #ffffff;
+  --content-bg: #000000;
+  --bg-color: #000000;
+  --primary-color: #ffffff;
+  --primary-color-rgb: 255, 255, 255;
+  --secondary-color: #ffffff;
 }
 
 .about-page {
