--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -32,6 +32,10 @@
   padding: 1rem 0;
   max-width: 800px;
   margin: 0 auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hero-content h1 {
@@ -56,6 +60,39 @@
   color: var(--text-color);
   margin: 0 auto 0.5rem auto;
   max-width: 700px;
+}
+
+.typewriter-container {
+  text-align: center;
+  width: 100%;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  cursor: default;
+}
+
+.typewriter {
+  position: relative;
+  font-size: 1.2rem;
+  line-height: 1.6;
+  white-space: nowrap;
+  display: inline-block;
+  text-align: left;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  caret-color: transparent;
+  pointer-events: none;
+  cursor: default;
+}
+
+.typewriter * {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .highlight {
@@ -250,13 +287,16 @@
 /* Responsive adjustments */
 @media (max-width: 991.98px) {
   .home-container{
-    padding-left: 4%;
+    padding-left: 0;
+    padding-right: 0;
     padding-top: 80px;
     padding-bottom: 0;
   }
   
   .home-container .container-fluid {
     height: calc(100% - 80px);
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
   .hero-content {
     padding: 0.5rem 0;
@@ -271,6 +311,13 @@
     font-size: 1rem;
     line-height: 1.4;
     margin-bottom: 0.3rem;
+  }
+
+  .typewriter {
+    font-size: 1rem;
+    white-space: normal;
+    word-wrap: break-word;
+    max-width: 100%;
   }
 
   .hero-image-container {
@@ -322,13 +369,15 @@
 
 @media (max-width: 767.98px) {
   .home-container {
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 0;
+    padding-right: 0;
     padding-top: 80px;
   }
   
   .home-container .container-fluid {
     height: calc(100% - 80px);
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .hero-content {
@@ -345,6 +394,13 @@
     font-size: 0.85rem;
     line-height: 1.3;
     margin-bottom: 0.2rem;
+  }
+
+  .typewriter {
+    font-size: 0.85rem;
+    white-space: normal;
+    word-wrap: break-word;
+    max-width: 100%;
   }
 
   .hero-image-container {
